noinst_PROGRAMS = build_ctx simple_putdir simple_put simple_getdir simple_get

build_ctx_CFLAGS = -I$(top_srcdir)/libdroplet/include
build_ctx_LDADD = $(top_builddir)/libdroplet/libdroplet.la
build_ctx_SOURCES = build_ctx.c

simple_putdir_CFLAGS = -I$(top_srcdir)/libdroplet/include
simple_putdir_LDADD = $(top_builddir)/libdroplet/libdroplet.la
simple_putdir_SOURCES = simple_putdir.c

simple_put_CFLAGS = -I$(top_srcdir)/libdroplet/include
simple_put_LDADD = $(top_builddir)/libdroplet/libdroplet.la
simple_put_SOURCES = simple_put.c

simple_getdir_CFLAGS = -I$(top_srcdir)/libdroplet/include
simple_getdir_LDADD = $(top_builddir)/libdroplet/libdroplet.la
simple_getdir_SOURCES = simple_getdir.c

simple_get_CFLAGS = -I$(top_srcdir)/libdroplet/include
simple_get_LDADD = $(top_builddir)/libdroplet/libdroplet.la
simple_get_SOURCES = simple_get.c
